Coordinate1.4/Crd/Crd/gts.cs


        public struct TThreadSts
        {
	        public short  run;
	        public short  error;
	        public double result;
	        public short  line;
        } 
        [DllImport("gts.dll")]
        public static extern short GT_Compile(string pFileName,out TCompileInfo pWrongInfo);
        [DllImport("gts.dll")]
        public static extern short GT_Download(string pFileName);
        [DllImport("gts.dll")]
        public static extern short GT_GetFunId(string pFunName,out short  pFunId);
        [DllImport("gts.dll")]
        public static extern short GT_GetVarId(string pFunName,string pVarName,out TVarInfo pVarInfo);
        [DllImport("gts.dll")]
        public static extern short GT_Bind(short thread,short funId,short page);
        [DllImport("gts.dll")]
        public static extern short GT_RunThread(short thread);
        [DllImport("gts.dll")]
        public static extern short GT_RunThreadPeriod(short thread,short ms,short priority);
        [DllImport("gts.dll")]
        public static extern short GT_StepThread(short thread);
        [DllImport("gts.dll")]
        public static extern short GT_StopThread(short thread);
        [DllImport("gts.dll")]
        public static extern short GT_PauseThread(short thread);
        [DllImport("gts.dll")]
        public static extern short GT_GetThreadSts(short thread,out TThreadSts pThreadSts);
        [DllImport("gts.dll")]
        public static extern short GT_GetThreadTime(short thread,out short  pPeriod,out double pExecuteTime,out double pExecuteTimeMax);
        [DllImport("gts.dll")]
        public static extern short GT_SetVarValue(short page,ref TVarInfo pVarInfo,out double pValue,short count);
        [DllImport("gts.dll")]
        public static extern short GT_GetVarValue(short page,out TVarInfo pVarInfo,out double pValue,short count);
        [DllImport("gts.dll")]
        public static extern short GT_UnbindVar(short thread);
        [DllImport("gts.dll")]
        public static extern short GT_BindDi(short thread,ref TVarInfo pVarInfo,ref TBindDi pBindDi);
        [DllImport("gts.dll")]
        public static extern short GT_BindDo(short thread,ref TVarInfo pVarInfo,ref TBindDo pBindDo);
        [DllImport("gts.dll")]
        public static extern short GT_BindTimer(short thread,ref TVarInfo pVarInfo,ref TBindTimer pBindTimer);
        [DllImport("gts.dll")]
        public static extern short GT_BindCounter(short thread,ref TVarInfo pVarInfo,ref TBindCounter pBindCounter);
        [DllImport("gts.dll")]
        public static extern short GT_BindFlank(short thread,ref TVarInfo pVarInfo,ref TBindFlank pBindFlank);
        [DllImport("gts.dll")]
        public static extern short GT_BindSrff(short thread,ref TVarInfo pVarInfo,ref TBindSrff pBindSrff);
        [DllImport("gts.dll")]
        public static extern short GT_GetBindDi(out TVarInfo pVarInfo,out TBindDi pBindDi);
        [DllImport("gts.dll")]
        public static extern short GT_GetBindDo(out TVarInfo pVarInfo,out TBindDo pBindDo);
        [DllImport("gts.dll")]
        public static extern short GT_GetBindTimer(out TVarInfo pVarInfo,out TBindTimer pBindTimer,out Int32  pCount);
        [DllImport("gts.dll")]
        public static extern short GT_GetBindCounter(out TVarInfo pVarInfo,out TBindCounter pBindCounter,out Int32  pUnitCount,out Int32  pCount);
        [DllImport("gts.dll")]
        public static extern short GT_GetBindFlank(out TVarInfo pVarInfo,out TBindFlank pBindFlank);
        [DllImport("gts.dll")]
        public static extern short GT_GetBindSrff(out TVarInfo pVarInfo,out TBindSrff pBindSrff);
        [DllImport("gts.dll")]
        public static extern short GT_GetBindDiCount(short thread,out short  pCount);
        [DllImport("gts.dll")]
        public static extern short GT_GetBindDoCount(short thread,out short  pCount);
        [DllImport("gts.dll")]
        public static extern short GT_GetBindTimerCount(short thread,out short  pCount);
        [DllImport("gts.dll")]
        public static extern short GT_GetBindCounterCount(short thread,out short  pCount);
        [DllImport("gts.dll")]
        public static extern short GT_GetBindFlankCount(short thread,out short  pCount);
        [DllImport("gts.dll")]
        public static extern short GT_GetBindSrffCount(short thread,out short  pCount);
        [DllImport("gts.dll")]

        public static extern short GT_GetBindDiInfo(short thread,short index,out short  pVar,out TBindDi pBindDi);
        [DllImport("gts.dll")]
        public static extern short GT_GetBindDoInfo(short thread,short index,out short  pVar,out TBindDo pBindDo);
        [DllImport("gts.dll")]
        public static extern short GT_GetBindTimerInfo(short thread,short index,out short  pVar,out TBindTimer pBindTimer);
        [DllImport("gts.dll")]
        public static extern short GT_GetBindCounterInfo(short thread,short index,out short  pVar,out TBindCounter pBindCounter);
        [DllImport("gts.dll")]
        public static extern short GT_GetBindFlankInfo(short thread,short index,out short  pVar,out TBindFlank pBindFlank);
        [DllImport("gts.dll")]
        public static extern short GT_GetBindSrffInfo(short thread,short index,out short  pVar,out TBindSrff pBindSrff);
        [DllImport("gts.dll")]


        public static extern short GTN_Compile(string pFileName,ref TCompileInfo pWrongInfo);
        [DllImport("gts.dll")]
        public static extern short GTN_Download(short core,string pFileName);
        [DllImport("gts.dll")]
        public static extern short GTN_GetFunId(string pFunName,out short  pFunId);
        [DllImport("gts.dll")]
        public static extern short GTN_GetVarId(string pFunName,string pVarName,out TVarInfo pVarInfo);
        [DllImport("gts.dll")]
        public static extern short GTN_Bind(short core,short thread,short funId,short page);
        [DllImport("gts.dll")]
        public static extern short GTN_RunThread(short core,short thread);
        [DllImport("gts.dll")]
        public static extern short GTN_RunThreadPeriod(short core,short thread,short ms,short priority);
        [DllImport("gts.dll")]
        public static extern short GTN_StepThread(short core,short thread);
        [DllImport("gts.dll")]
        public static extern short GTN_StopThread(short core,short thread);
        [DllImport("gts.dll")]
        public static extern short GTN_PauseThread(short core,short thread);
        [DllImport("gts.dll")]
        public static extern short GTN_GetThreadSts(short core,short thread,out TThreadSts pThreadSts);
        [DllImport("gts.dll")]
        public static extern short GTN_GetThreadTime(short core,short thread,out short  pPeriod,out double pExecuteTime,out double pExecuteTimeMax);
        [DllImport("gts.dll")]
        public static extern short GTN_SetVarValue(short core,short page,ref TVarInfo pVarInfo,out double pValue,short count);
        [DllImport("gts.dll")]
        public static extern short GTN_GetVarValue(short core,short page,out TVarInfo pVarInfo,out double pValue,short count);
        [DllImport("gts.dll")]

        public static extern short GTN_UnbindVar(short core,short thread);
        [DllImport("gts.dll")]
        public static extern short GTN_BindDi(short core,short thread,ref TVarInfo pVarInfo,ref TBindDi pBindDi);
        [DllImport("gts.dll")]
        public static extern short GTN_BindDo(short core,short thread,ref TVarInfo pVarInfo,ref TBindDo pBindDo);
        [DllImport("gts.dll")]
        public static extern short GTN_BindTimer(short core,short thread,ref TVarInfo pVarInfo,ref TBindTimer pBindTimer);
        [DllImport("gts.dll")]
        public static extern short GTN_BindCounter(short core,short thread,ref TVarInfo pVarInfo,ref TBindCounter pBindCounter);
        [DllImport("gts.dll")]
        public static extern short GTN_BindFlank(short core,short thread,ref TVarInfo pVarInfo,ref TBindFlank pBindFlank);
        [DllImport("gts.dll")]
        public static extern short GTN_BindSrff(short core,short thread,ref TVarInfo pVarInfo,ref TBindSrff pBindSrff);
        [DllImport("gts.dll")]

        public static extern short GTN_GetBindDi(short core,out TVarInfo pVarInfo,out TBindDi pBindDi);
        [DllImport("gts.dll")]
        public static extern short GTN_GetBindDo(short core,out TVarInfo pVarInfo,out TBindDo pBindDo);
        [DllImport("gts.dll")]
        public static extern short GTN_GetBindTimer(short core,out TVarInfo pVarInfo,out TBindTimer pBindTimer,out Int32  pCount);
        [DllImport("gts.dll")]
        public static extern short GTN_GetBindCounter(short core,out TVarInfo pVarInfo,out TBindCounter pBindCounter,out Int32  pUnitCount,out Int32  pCount);
        [DllImport("gts.dll")]
        public static extern short GTN_GetBindFlank(short core,out TVarInfo pVarInfo,out TBindFlank pBindFlank);
        [DllImport("gts.dll")]
        public static extern short GTN_GetBindSrff(short core,out TVarInfo pVarInfo,out TBindSrff pBindSrff);
        [DllImport("gts.dll")]

        public static extern short GTN_GetBindDiCount(short core,short thread,out short  pCount);
        [DllImport("gts.dll")]
        public static extern short GTN_GetBindDoCount(short core,short thread,out short  pCount);
        [DllImport("gts.dll")]
        public static extern short GTN_GetBindTimerCount(short core,short thread,out short  pCount);
        [DllImport("gts.dll")]
        public static extern short GTN_GetBindCounterCount(short core,short thread,out short  pCount);
        [DllImport("gts.dll")]
        public static extern short GTN_GetBindFlankCount(short core,short thread,out short  pCount);
        [DllImport("gts.dll")]
        public static extern short GTN_GetBindSrffCount(short core,short thread,out short  pCount);
        [DllImport("gts.dll")]

        public static extern short GTN_GetBindDiInfo(short core,short thread,short index,out short  pVar,out TBindDi pBindDi);
        [DllImport("gts.dll")]
        public static extern short GTN_GetBindDoInfo(short core,short thread,short index,out short  pVar,out TBindDo pBindDo);
        [DllImport("gts.dll")]
        public static extern short GTN_GetBindTimerInfo(short core,short thread,short index,out short  pVar,out TBindTimer pBindTimer);
        [DllImport("gts.dll")]
        public static extern short GTN_GetBindCounterInfo(short core,short thread,short index,out short  pVar,out TBindCounter pBindCounter);
        [DllImport("gts.dll")]
        public static extern short GTN_GetBindFlankInfo(short core,short thread,short index,out short  pVar,out TBindFlank pBindFlank);
        [DllImport("gts.dll")]
        public static extern short GTN_GetBindSrffInfo(short core,short thread,short index,out short  pVar,out TBindSrff pBindSrff);



        public const short INTERPOLATION_AXIS_MAX =                  (8);

        public const short CRD_OPERATION_DATA_EXT_MAX  =             (2);


        public const short CRD_BUFFER_MODE_DYNAMIC_DEFAULT =         (0);
        public const short CRD_BUFFER_MODE_DYNAMIC_KEEP =            (1);
        public const short CRD_BUFFER_MODE_STATIC_INPUT =            (11);
        public const short CRD_BUFFER_MODE_STATIC_READY =            (12);
        public const short CRD_BUFFER_MODE_STATIC_START  =           (13);

        public const short INTERPOLATION_CIRCLE_PLAT_XY  =           (0);
        public const short INTERPOLATION_CIRCLE_PLAT_YZ =            (1);
        public const short INTERPOLATION_CIRCLE_PLAT_ZX  =           (2);
